unpackaged/main/default/objects/Derogation__c/Derogation__c.object-meta.xml
<CustomObject>
    <label>Dérogation</label>
    <nameField>
        <displayFormat>DERO-{0000}</displayFormat>
        <label>Num de Dérogation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dérogations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>