unpackaged/main/default/objects/Derogation__c/fields/Agence_PF__c.field-meta.xml
<CustomField>
    <fullName>Agence_PF__c</fullName>
    <formula>text( Opportunite__r.AgencePF__c )</formula>
    <label>Agence PF</label>
    <type>Text</type>
</CustomField>