unpackaged/main/default/objects/Derogation__c/fields/Client_VIP__c.field-meta.xml
<CustomField>
    <fullName>Client_VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client VIP</label>
    <type>Checkbox</type>
</CustomField>