unpackaged/main/default/objects/Derogation__c/fields/Commentaire_demande__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_demande__c</fullName>
    <label>Commentaire</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>