unpackaged/main/default/objects/Derogation__c/fields/Commentaire_DG__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_DG__c</fullName>
    <label>Commentaire DG</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>