unpackaged/main/default/objects/Derogation__c/fields/Compte_parent__c.field-meta.xml
<CustomField>
    <fullName>Compte_parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dérogations (Compte parent)</relationshipLabel>
    <relationshipName>Derogations_CompteParent</relationshipName>
    <type>Lookup</type>
</CustomField>