unpackaged/main/default/objects/Derogation__c/fields/Conditions_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>Conditions_de_paiement__c</fullName>
    <label>Facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debut_de_mois</fullName>
                <label>Début de mois</label>
            </value>
            <value>
                <fullName>Fin_de_mois</fullName>
                <label>Fin de mois</label>
            </value>
            <value>
                <fullName>30 jours fin de mois</fullName>
                <isActive>false</isActive>
                <label>30 jours fin de mois</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>