unpackaged/main/default/objects/Derogation__c/fields/D_ro_Clon__c.field-meta.xml
<CustomField>
    <fullName>D_ro_Clon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Déro Cloné</label>
    <type>Checkbox</type>
</CustomField>