unpackaged/main/default/objects/Derogation__c/fields/Date_heure_de_soumission__c.field-meta.xml
<CustomField>
    <fullName>Date_heure_de_soumission__c</fullName>
    <label>Date / heure de soumission</label>
    <type>DateTime</type>
</CustomField>