unpackaged/main/default/objects/Derogation__c/fields/Devis__c.field-meta.xml
<CustomField>
    <fullName>Devis__c</fullName>
    <label>Devis</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 AND (2 OR 3) AND 4) OR (5 AND 6)</booleanFilter>
        <errorMessage>Le devis doit être tarifé/Accepté et la tarification synchronisée.</errorMessage>
        <filterItems>
            <field>$Source.Opportunite__c</field>
            <operation>equals</operation>
            <valueField>Quote.Opportunity.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Quote.Status</field>
            <operation>equals</operation>
            <value>Tarifé</value>
        </filterItems>
        <filterItems>
            <field>Quote.Status</field>
            <operation>equals</operation>
            <value>Accepté</value>
        </filterItems>
        <filterItems>
            <field>Quote.Loyer__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <filterItems>
            <field>Quote.Status</field>
            <operation>equals</operation>
            <value>Annulé</value>
        </filterItems>
        <filterItems>
            <field>$Source.Statut__c</field>
            <operation>equals</operation>
            <value>Annulée</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Dérogations</relationshipLabel>
    <relationshipName>Derogations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>