unpackaged/main/default/objects/Derogation__c/fields/Devis_code_pf__c.field-meta.xml
<CustomField>
    <fullName>Devis_code_pf__c</fullName>
    <formula>Devis__r.Code_PF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Devis.code pf</label>
    <type>Text</type>
</CustomField>