unpackaged/main/default/objects/Derogation__c/fields/Devis_standard__c.field-meta.xml
<CustomField>
    <fullName>Devis_standard__c</fullName>
    <formula>TEXT(Devis__r.STANDARD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Devis.standard</label>
    <type>Text</type>
</CustomField>