unpackaged/main/default/objects/Derogation__c/fields/devise_du_dero__c.field-meta.xml
<CustomField>
    <fullName>devise_du_dero__c</fullName>
    <formula>Opportunite__r.DeviseOpportunite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Devise</label>
    <type>Text</type>
</CustomField>