unpackaged/main/default/objects/Derogation__c/fields/Distance_agence_Km__c.field-meta.xml
<CustomField>
    <fullName>Distance_agence_Km__c</fullName>
    <label>Distance agence (Km)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>