unpackaged/main/default/objects/Derogation__c/fields/Duree_amendee__c.field-meta.xml
<CustomField>
    <fullName>Duree_amendee__c</fullName>
    <label>Durée amendée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>