unpackaged/main/default/objects/Derogation__c/fields/Duree_Mois__c.field-meta.xml
<CustomField>
    <fullName>Duree_Mois__c</fullName>
    <label>Durée demandé (Mois)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>