unpackaged/main/default/objects/Derogation__c/fields/Duree_rappel__c.field-meta.xml
<CustomField>
    <fullName>Duree_rappel__c</fullName>
    <label>Durée (Rappel)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>