unpackaged/main/default/objects/Derogation__c/fields/Facturation_11_12__c.field-meta.xml
<CustomField>
    <fullName>Facturation_11_12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturation 11/12</label>
    <type>Checkbox</type>
</CustomField>