unpackaged/main/default/objects/Derogation__c/fields/Franchise__c.field-meta.xml
<CustomField>
    <fullName>Franchise__c</fullName>
    <label>Montant sinistre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>