unpackaged/main/default/objects/Derogation__c/fields/Indexation_Km__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Km__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indexation Km?</label>
    <type>Checkbox</type>
</CustomField>