unpackaged/main/default/objects/Derogation__c/fields/Indexation_loyer__c.field-meta.xml
<CustomField>
    <fullName>Indexation_loyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indexation loyer?</label>
    <type>Checkbox</type>
</CustomField>