unpackaged/main/default/objects/Derogation__c/fields/Kilometrage_amende__c.field-meta.xml
<CustomField>
    <fullName>Kilometrage_amende__c</fullName>
    <label>Kilométrage amendé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>