unpackaged/main/default/objects/Derogation__c/fields/KM_demande__c.field-meta.xml
<CustomField>
    <fullName>KM_demande__c</fullName>
    <label>Kilométrage demandé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>