unpackaged/main/default/objects/Derogation__c/fields/Km_rappel__c.field-meta.xml
<CustomField>
    <fullName>Km_rappel__c</fullName>
    <label>Kilométrage (Rappel)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>