unpackaged/main/default/objects/Derogation__c/fields/LD_Gratuit__c.field-meta.xml
<CustomField>
    <fullName>LD_Gratuit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LD Gratuit</label>
    <type>Checkbox</type>
</CustomField>