unpackaged/main/default/objects/Derogation__c/fields/Loyer_demande__c.field-meta.xml
<CustomField>
    <fullName>Loyer_demande__c</fullName>
    <label>Loyer demandé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>