unpackaged/main/default/objects/Derogation__c/fields/Mode_de_reglement__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_reglement__c</fullName>
    <label>Mode de règlement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prélèvement</fullName>
            </value>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>Virement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>