unpackaged/main/default/objects/Derogation__c/fields/Mulet__c.field-meta.xml
<CustomField>
    <fullName>Mulet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mulet</label>
    <type>Checkbox</type>
</CustomField>