unpackaged/main/default/objects/Derogation__c/fields/Nb_de_mois_de_caution__c.field-meta.xml
<CustomField>
    <fullName>Nb_de_mois_de_caution__c</fullName>
    <label>Nb de mois de caution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 mois</fullName>
            </value>
            <value>
                <fullName>2 mois</fullName>
            </value>
            <value>
                <fullName>1 mois</fullName>
            </value>
            <value>
                <fullName>0 mois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>