unpackaged/main/default/objects/Derogation__c/fields/Nom_Commercial_Societe__c.field-meta.xml
<CustomField>
    <fullName>Nom_Commercial_Societe__c</fullName>
    <formula>Opportunite__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom Commercial Société</label>
    <type>Text</type>
</CustomField>