unpackaged/main/default/objects/Derogation__c/fields/PAT_Devis__c.field-meta.xml
<CustomField>
    <fullName>PAT_Devis__c</fullName>
    <description>Somme_PAT__c du devis</description>
    <formula>Devis__r.Somme_PAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAT Devis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>