unpackaged/main/default/objects/Derogation__c/fields/Pays_Region_PF__c.field-meta.xml
<CustomField>
    <fullName>Pays_Region_PF__c</fullName>
    <formula>text( Opportunite__r.PaysRegionPF__c )</formula>
    <label>Pays / Région PF</label>
    <type>Text</type>
</CustomField>