unpackaged/main/default/objects/Derogation__c/fields/Porte_de_sortie__c.field-meta.xml
<CustomField>
    <fullName>Porte_de_sortie__c</fullName>
    <label>Porte de sortie (Mois)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>