unpackaged/main/default/objects/Derogation__c/fields/Prise_a_la_concurrence__c.field-meta.xml
<CustomField>
    <fullName>Prise_a_la_concurrence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prise à la concurrence</label>
    <type>Checkbox</type>
</CustomField>