unpackaged/main/default/objects/Derogation__c/fields/Prix_du_km_supp_les_100_kms_Demande__c.field-meta.xml
<CustomField>
    <fullName>Prix_du_km_supp_les_100_kms_Demande__c</fullName>
    <label>Prix du km supp les 100 kms (Demandé)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>