unpackaged/main/default/objects/Derogation__c/fields/Prix_du_km_supp_les_100_kms_Rappel__c.field-meta.xml
<CustomField>
    <fullName>Prix_du_km_supp_les_100_kms_Rappel__c</fullName>
    <formula>Devis__r.Prix_du_km_supplementaire_les_100_kms__c</formula>
    <label>Prix du km supp les 100 kms (Rappel)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>