unpackaged/main/default/objects/Derogation__c/fields/RYF__c.field-meta.xml
<CustomField>
    <fullName>RYF__c</fullName>
    <formula>Loyer_demande__c /( Devis__r.Prix_0_kms__c + ( KM_demande__c /100* Devis__r.Prix_des_kms_inclus_les_100_kms__c))-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RYF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>