unpackaged/main/default/objects/Derogation__c/fields/RYF_demande_deprecated__c.field-meta.xml
<CustomField>
    <fullName>RYF_demande_deprecated__c</fullName>
    <label>RYF demandé(%) (deprectaed)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>