unpackaged/main/default/objects/Derogation__c/fields/RYF_initial__c.field-meta.xml
<CustomField>
    <fullName>RYF_initial__c</fullName>
    <label>RYF Initial (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>