unpackaged/main/default/objects/Derogation__c/fields/Sans_assurance_RC__c.field-meta.xml
<CustomField>
    <fullName>Sans_assurance_RC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sans assurance RC</label>
    <type>Checkbox</type>
</CustomField>