unpackaged/main/default/objects/Derogation__c/fields/SFAC__c.field-meta.xml
<CustomField>
    <fullName>SFAC__c</fullName>
    <label>SFAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>