unpackaged/main/default/objects/Derogation__c/fields/Sinistre_Choc_en_Hauteur__c.field-meta.xml
<CustomField>
    <fullName>Sinistre_Choc_en_Hauteur__c</fullName>
    <label>Sinistre Choc en Hauteur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>