unpackaged/main/default/objects/Derogation__c/fields/Sinistre_Mise_en_portefeuille__c.field-meta.xml
<CustomField>
    <fullName>Sinistre_Mise_en_portefeuille__c</fullName>
    <label>Sinistre Mise en portefeuille</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>