unpackaged/main/default/objects/Derogation__c/fields/Sinistre_Vol_Incendie__c.field-meta.xml
<CustomField>
    <fullName>Sinistre_Vol_Incendie__c</fullName>
    <label>Sinistre Vol/Incendie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>