unpackaged/main/default/objects/Derogation__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <defaultValue>&quot;Crée&quot;</defaultValue>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crée</fullName>
                <default>true</default>
                <label>Crée</label>
            </value>
            <value>
                <fullName>Demandée</fullName>
            </value>
            <value>
                <fullName>Acceptée</fullName>
            </value>
            <value>
                <fullName>Refusée</fullName>
            </value>
            <value>
                <fullName>Annulée</fullName>
            </value>
            <value>
                <fullName>Amendée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>