unpackaged/main/default/objects/Derogation__c/fields/Statut_Derogation__c.field-meta.xml
<CustomField>
    <fullName>Statut_Derogation__c</fullName>
    <label>Statut Dérogation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>En attente DG</fullName>
            </value>
            <value>
                <fullName>Approuvée</fullName>
            </value>
            <value>
                <fullName>Rejetée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>