unpackaged/main/default/objects/Derogation__c/fields/Synchronise__c.field-meta.xml
<CustomField>
    <fullName>Synchronise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synchronisé</label>
    <type>Checkbox</type>
</CustomField>