unpackaged/main/default/objects/Derogation__c/fields/Ultimate_Account__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dérogations (Ultimate Account)</relationshipLabel>
    <relationshipName>Derogations_ultimate_account</relationshipName>
    <type>Lookup</type>
</CustomField>