unpackaged/main/default/objects/Derogation__c/recordTypes/Derogation.recordType-meta.xml
<RecordType>
    <fullName>Derogation</fullName>
    <active>true</active>
    <label>Dérogation</label>
</RecordType>