unpackaged/main/default/objects/Derogation__c/recordTypes/Derogation_contractuelle_DRAFT.recordType-meta.xml
<RecordType>
    <fullName>Derogation_contractuelle_DRAFT</fullName>
    <active>true</active>
    <label>Dérogation contractuelle - DRAFT</label>
</RecordType>