unpackaged/main/default/objects/Derogation__c/recordTypes/Derogation_contractuelle_En_cours.recordType-meta.xml
<RecordType>
    <fullName>Derogation_contractuelle_En_cours</fullName>
    <active>true</active>
    <label>Dérogation contractuelle - En cours</label>
</RecordType>