unpackaged/main/default/objects/Derogation__c/recordTypes/Derogation_contractuelle_Lecture_seule.recordType-meta.xml
<RecordType>
    <fullName>Derogation_contractuelle_Lecture_seule</fullName>
    <active>true</active>
    <label>Dérogation contractuelle - Lecture seule</label>
</RecordType>