unpackaged/main/default/objects/Derogation__c/recordTypes/Derogation_Lecture_seule.recordType-meta.xml
<RecordType>
    <fullName>Derogation_Lecture_seule</fullName>
    <active>true</active>
    <label>Dérogation - Lecture seule</label>
</RecordType>