unpackaged/main/default/objects/Derogation__c/recordTypes/Derogation_tarifaire_DRAFT.recordType-meta.xml
<RecordType>
    <fullName>Derogation_tarifaire_DRAFT</fullName>
    <active>true</active>
    <label>Dérogation tarifaire - DRAFT</label>
</RecordType>