unpackaged/main/default/objects/Derogation__c/recordTypes/Derogation_tarifaire_En_Cours.recordType-meta.xml
<RecordType>
    <fullName>Derogation_tarifaire_En_Cours</fullName>
    <active>true</active>
    <label>Dérogation tarifaire - En Cours</label>
</RecordType>