unpackaged/main/default/objects/Derogation__c/recordTypes/Derogation_tarifaire_Lecture_seule.recordType-meta.xml
<RecordType>
    <fullName>Derogation_tarifaire_Lecture_seule</fullName>
    <active>true</active>
    <label>Dérogation tarifaire - Lecture seule</label>
</RecordType>