unpackaged/main/default/objects/Derogation__c/validationRules/VR_WFC_Conditions_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_WFC_Conditions_Creation</fullName>
    <active>true</active>
    <description>GFC-481</description>
    <errorConditionFormula>AND
(

OR
(
 RecordType.Id ==  LEFT($Label.WFC_Dero_RecordTypeID_TarifaireDRAFT,15)
,
 RecordType.Id == LEFT($Label.WFC_Dero_RecordTypeID_TarifaireENCOURS,15) 
)
,

OR( 
ISBLANK(Devis__r.Loyer__c)
,
ISNULL(Devis__r.Loyer__c)

)

)</errorConditionFormula>
    <errorMessage>Un loyer doit être sélectionné avant de créer une dérogation tarifaire</errorMessage>
</ValidationRule>