unpackaged/main/default/objects/Derogation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>Synchronise__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Pays_Region_PF__c</columns>
    <columns>Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>