unpackaged/main/default/objects/Derogation__c/listViews/Derogations_Rejetees.listView-meta.xml
<ListView>
    <fullName>Derogations_Rejetees</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>PAT_Devis__c</columns>
    <columns>RYF_demande__c</columns>
    <columns>Loyer_demande__c</columns>
    <columns>KM_demande__c</columns>
    <columns>Duree_Mois__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Refusée</value>
    </filters>
    <label>Dérogations Rejetées</label>
</ListView>