unpackaged/main/default/objects/Derogation__c/listViews/DF2_D_rogation_en_attente.listView-meta.xml
<ListView>
    <fullName>DF2_D_rogation_en_attente</fullName>
    <columns>Pays_Region_PF__c</columns>
    <columns>Agence_PF__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Statut__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunite__c</columns>
    <columns>SFAC__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Demandée</value>
    </filters>
    <filters>
        <field>Pays_Region_PF__c</field>
        <operation>equals</operation>
        <value>DO2A,DO2B</value>
    </filters>
    <label>DF2 - Dérogation en attente</label>
</ListView>