unpackaged/main/default/objects/Derogation__c/listViews/DF2_D_rogations.listView-meta.xml
<ListView>
    <fullName>DF2_D_rogations</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Statut__c</columns>
    <columns>Synchronise__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Pays_Region_PF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pays_Region_PF__c</field>
        <operation>equals</operation>
        <value>DO2A,DO2B</value>
    </filters>
    <label>DF2 - Dérogations</label>
    <sharedTo />
</ListView>