unpackaged/main/default/objects/Derogation__c/listViews/IDF_Toutes_D_ro.listView-meta.xml
<ListView>
    <fullName>IDF_Toutes_D_ro</fullName>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>Client__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Pays_Region_PF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pays_Region_PF__c</field>
        <operation>equals</operation>
        <value>DRO IDF 1,DRO IDF 2</value>
    </filters>
    <label>IDF Toutes Déro</label>
</ListView>