unpackaged/main/default/objects/Derogation__c/listViews/X01_Mes_d_rogations_Draft.listView-meta.xml
<ListView>
    <fullName>X01_Mes_d_rogations_Draft</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Opportunite__c</columns>
    <columns>Devis__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Crée</value>
    </filters>
    <label>01 - Mes dérogations Draft</label>
</ListView>