unpackaged/main/default/objects/Derogation__c/listViews/X02_Mes_d_rogations_en_cours.listView-meta.xml
<ListView>
    <fullName>X02_Mes_d_rogations_en_cours</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Demandée</value>
    </filters>
    <label>02 - Mes dérogations en cours</label>
</ListView>