unpackaged/main/default/objects/Derogation__c/listViews/X03_Mes_d_rogations_EFO.listView-meta.xml
<ListView>
    <fullName>X03_Mes_d_rogations_EFO</fullName>
    <columns>NAME</columns>
    <columns>Devis__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Acceptée,Refusée,Amendée</value>
    </filters>
    <label>03 - Mes retours de dérogations</label>
</ListView>