unpackaged/main/default/objects/Derogation__c/listViews/X04_D_rogation_en_attente.listView-meta.xml
<ListView>
    <fullName>X04_D_rogation_en_attente</fullName>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>Client__c</columns>
    <columns>Opportunite__c</columns>
    <columns>SFAC__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Demandée</value>
    </filters>
    <label>04 - Dérogation en attente</label>
    <sharedTo>
        <role>DirecteurCommercialInternational</role>
    </sharedTo>
</ListView>